# Velocity-CPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ROADMAP.md  compile_commands.json
engine/: CMakeLists.txt
engine/OpenGL/src/: gl_objects.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
engine/OpenGL/src/include/: gl_objects.h  renderer.h  shader.h  texture.h  window.h
engine/util/: logger.cpp  logger.h  util.cpp  util.h
resources/shader/: primitive.vert  texture.frag  texture.vert
src/: logger.cpp  main.cpp
src/include/: logger.h
testapp/: main.cpp
